--- a/resources/views/view.html.twig
+++ b/resources/views/view.html.twig
@@ -5,12 +5,7 @@
     
     <div class="">
       <!-- Start Search From--> 
-      <form action="" method="post" novalidate {{ form_enctype(search) }} class=" ">
-        {{ form_widget(search) }}
-      </form>
-      <div class="form-actions">
-            <button type="submit" class="btn btn-primary">{{ 'Send'|trans }}</button>
-      </div>
+      <h1>{{ pid }}</h1>
     </div> 
     <h1>Hello</h1>
     {% if is_granted('ROLE_USER') %}
