--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -32,6 +32,8 @@
                         <li {% if 'page_with_cache' == active %}class="active"{% endif %}><a href="{{ path('page_with_cache') }}">Cache sample</a></li>
                         <li {% if 'form' == active %}class="active"{% endif %}><a href="{{ path('form') }}">Form sample</a></li>
                         <li {% if 'doctrine' == active %}class="active"{% endif %}><a href="{{ path('doctrine') }}">Doctrine</a></li>
+                        <li {% if 'browse' == active %}class="active"{% endif %}><a href="{{ path('browse') }}">Browse</a></li>
+
                         <li class="dropdown{% if 'account' == active %} active{% endif %}">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 Account <b class="caret"></b>
