Working on the base html layout for the project in twig.

--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -1,7 +1,17 @@
-@import "../../../vendor/twitter/bootstrap/less/bootstrap.less";
+//Import the base bootstrap less here.
 
-body {
-    padding-top: 60px;
+@import "../../../vendor/twitter/bootstrap/less/bootstrap.less";
+@import "data-img.less";
+
+//add the SVG to the header of the layout.html.twig file;
+
+.nu-lib-logo{
+  .library-svg;
+  display: block;
+  width: 400px;
+  height: 65px;
 }
+
+
 
 
