--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -81,13 +81,12 @@
             {% endblock %}
         </div>
     </div>
-    <footer class="footer">
-        <div class="container">
+    <footer>
             <div class="row-fluid">
-                        <div class="span3 nu ">
+                        <div class="col-span-3 nu ">
                             <a alt="Northeastern University" href="http://www.northeastern.edu">Northeastern University</a>
                         </div>
-                        <div class="span6">
+                        <div class="col-span-6">
                             <nav>
                                 <ul class="info"> 
                                     <li><a href="http://myneu.neu.edu/cp/home/displaylogin" class="ext">myNEU</a>
@@ -102,7 +101,7 @@
                                 &copy; <!-- TODO Change this templace to accept a year variable.-->2013 Northeastern University
                             </p>
                         </div>
-                        <div class="span3 social icons">
+                        <div class="col-span-3 social icons">
                             <!-- Youtube Icon -->
                             <a class="social icon youtube ext" href="https://www.youtube.com/northeastern">
                                 <i class="icon-youtube icon-large"></i>
@@ -124,8 +123,6 @@
                         </div>
         
                     </div>
-                </div>
-
         </footer>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
