Adding more of the markup to the layout view.

--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -5365,13 +5365,6 @@ a.list-group-item.active > .badge,
   }
 }
 
-.library-svg {
-  background: url('/img/nu-libraries-logo.svg');
-}
-
-.nu-lib-logo {
-  display: block;
-  width: 400px;
-  height: 65px;
-  background: url('/img/nu-libraries-logo.svg');
+body {
+  padding-top: 60px;
 }
