--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -10,8 +10,16 @@
   display: block;
   width: 400px;
   height: 65px;
+  background-repeat: none;
+  background-size: cover;
+}
+
+body{
+  max-width: 100em;
+  margin: 2em auto;
 }
 
 
-
-
+header{
+  margin-bottom: 2em;
+}
