--- a/resources/assets/less/data-img.less
+++ b/resources/assets/less/data-img.less
@@ -6,5 +6,6 @@
 //
 
 .library-svg{
-  background: url('/img/nu-libraries-logo.svg');
+  background: url('/img/nu-libraries-logo.svg') no-repeat top left;
+  background-size: contain;
 }
