--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -1,6 +1,75 @@
-//Import the base bootstrap less here.
+/*!
+ * Bootstrap v3.0.0
+ *
+ * Copyright 2013 Twitter, Inc
+ * Licensed under the Apache License v2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Designed and built with all the love in the world by @mdo and @fat.
+ */
 
-@import "../../../vendor/twitter/bootstrap/less/bootstrap.less";
+// Core variables and mixins
+@import "../../../vendor/twitter/bootstrap/less/variables.less";
+@import "drs-variables.less";
+@import "../../../vendor/twitter/bootstrap/less/mixins.less";
+
+// Reset
+@import "../../../vendor/twitter/bootstrap/less/normalize.less";
+@import "../../../vendor/twitter/bootstrap/less/print.less";
+
+// Core CSS
+@import "../../../vendor/twitter/bootstrap/less/scaffolding.less";
+@import "../../../vendor/twitter/bootstrap/less/type.less";
+@import "../../../vendor/twitter/bootstrap/less/code.less";
+@import "../../../vendor/twitter/bootstrap/less/grid.less";
+
+@import "../../../vendor/twitter/bootstrap/less/tables.less";
+@import "../../../vendor/twitter/bootstrap/less/forms.less";
+@import "../../../vendor/twitter/bootstrap/less/buttons.less";
+
+// Components: common
+@import "../../../vendor/twitter/bootstrap/less/component-animations.less";
+@import "../../../vendor/twitter/bootstrap/less/glyphicons.less";
+
+@import "../../../vendor/twitter/bootstrap/less/dropdowns.less";
+@import "../../../vendor/twitter/bootstrap/less/list-group.less";
+@import "../../../vendor/twitter/bootstrap/less/panels.less";
+@import "../../../vendor/twitter/bootstrap/less/wells.less";
+@import "../../../vendor/twitter/bootstrap/less/close.less";
+
+// Components: Nav
+@import "../../../vendor/twitter/bootstrap/less/navs.less";
+@import "../../../vendor/twitter/bootstrap/less/navbar.less";
+@import "../../../vendor/twitter/bootstrap/less/button-groups.less";
+@import "../../../vendor/twitter/bootstrap/less/breadcrumbs.less";
+@import "../../../vendor/twitter/bootstrap/less/pagination.less";
+@import "../../../vendor/twitter/bootstrap/less/pager.less";
+
+// Components: Popovers
+@import "../../../vendor/twitter/bootstrap/less/modals.less";
+@import "../../../vendor/twitter/bootstrap/less/tooltip.less";
+@import "../../../vendor/twitter/bootstrap/less/popovers.less";
+
+// Components: Misc
+@import "../../../vendor/twitter/bootstrap/less/alerts.less";
+@import "../../../vendor/twitter/bootstrap/less/thumbnails.less";
+@import "../../../vendor/twitter/bootstrap/less/media.less";
+@import "../../../vendor/twitter/bootstrap/less/labels.less";
+@import "../../../vendor/twitter/bootstrap/less/badges.less";
+@import "../../../vendor/twitter/bootstrap/less/progress-bars.less";
+@import "../../../vendor/twitter/bootstrap/less/accordion.less";
+@import "../../../vendor/twitter/bootstrap/less/carousel.less";
+@import "../../../vendor/twitter/bootstrap/less/jumbotron.less";
+
+// Utility classes
+@import "../../../vendor/twitter/bootstrap/less/utilities.less"; // Has to be last to override when necessary
+@import "../../../vendor/twitter/bootstrap/less/responsive-utilities.less";
+
+
+//-------------
+//end bootstrap less sheets.
+
+
 @import "data-img.less";
 
 //add the SVG to the header of the layout.html.twig file;
@@ -9,17 +78,31 @@
   .library-svg;
   display: block;
   width: 400px;
+  max-width: 100%;
   height: 65px;
-  background-repeat: none;
-  background-size: cover;
+  margin-bottom: 1em;
 }
 
 body{
   max-width: 100em;
-  margin: 2em auto;
+  margin: 0 auto;
+  background-color: #FFF;
+  padding: 1em 1.5em 0em 1.5em;
 }
 
-
 header{
-  margin-bottom: 2em;
+  margin-bottom: 1em;
+  .btn-group{
+    width: 50%;
+    > *{
+      width: 100%;
+    }
+  }
+}
+
+.jumbotron{
+  margin-top: 1.22em;
+  h1{
+    margin-top: 0em;
+  }
 }
