--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -27,7 +27,7 @@
         <nav class="col-span-6">
             <div class="btn-group pull-right">
                 <a href="#" class="dropdown-toggle btn btn-primary" data-toggle="dropdown">
-                    Account <b class="caret"></b>
+                    <span class="glyphicon-user glyphicon"></span>Account <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
                     {% if is_granted('ROLE_USER') %}
