--- a/resources/views/search.html.twig
+++ b/resources/views/search.html.twig
@@ -12,7 +12,7 @@
           <div class="row">
           {% endif %}
             
-            <div class="col-span-3">
+            <div class="col col-lg-3">
               <div class="thumbnail">
                 <a href="{{ path('view',{ pid: result.pid } ) }}" >
                   {% if result.lowres|length > 0  %}
@@ -28,7 +28,7 @@
                 {{result.publisher[0]}}
                 </p>
               </div> <!-- end thumbail -->  
-            </div><!-- end col-span-3-->
+            </div><!-- end col-lg-3-->
           {% if loop.last or loop.index % 4 == 0 %}
             </div><!--end row--> 
           {% endif %}
