--- a/resources/views/search.html.twig
+++ b/resources/views/search.html.twig
@@ -24,9 +24,11 @@
                   {% endif %}
                 </a>
               <h4>{{result.title_display}}</h4>
-                <p>
-                {{result.publisher[0]}}
-                </p>
+                {#% if result.publisher|length > 0 %}
+                  <p>
+                  {{result.publisher[0]}}
+                  </p>
+                {% endif %#}
               </div> <!-- end thumbail -->  
             </div><!-- end col-lg-3-->
           {% if loop.last or loop.index % 4 == 0 %}
